[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/Levels/BattleScene.gd" type="Script" id=1]
[ext_resource path="res://src/Fonts/manaspace/manaspc.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/Art/Player.png" type="Texture" id=3]
[ext_resource path="res://src/HurtBox.gd" type="Script" id=4]
[ext_resource path="res://src/Fonts/manaspace/manaspace8.tres" type="DynamicFont" id=5]
[ext_resource path="res://src/Art/Background.png" type="Texture" id=6]
[ext_resource path="res://src/Art/Shield.png" type="Texture" id=7]
[ext_resource path="res://src/Art/Heart.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 32 )

[node name="BattleScene" type="Node2D"]
script = ExtResource( 1 )

[node name="MainTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="InpireTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="DodgeTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Background" type="Sprite" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 2, 2 )
z_index = -10
texture = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="Background"]
visible = false
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.0823529, 0.741176, 0.807843, 1 )

[node name="HandCards" type="Node" parent="."]

[node name="Enemies" type="Node" parent="."]

[node name="Time" type="Label" parent="."]
margin_left = 69.0
margin_top = 69.0
margin_right = 109.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 2 )
text = "Time"

[node name="Player" type="Sprite" parent="."]
position = Vector2( 256, 360 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="Player"]
margin_left = -24.0
margin_top = -68.0
margin_right = 40.0
margin_bottom = -54.0
rect_min_size = Vector2( 48, 0 )
custom_fonts/font = ExtResource( 5 )
autowrap = true

[node name="Health" type="Label" parent="Player"]
margin_left = -4.0
margin_top = -68.0
margin_right = 60.0
margin_bottom = -54.0
rect_min_size = Vector2( 48, 0 )
custom_fonts/font = ExtResource( 5 )
autowrap = true

[node name="Armor" type="Label" parent="Player"]
margin_left = -4.0
margin_top = -52.0
margin_right = 60.0
margin_bottom = -38.0
rect_min_size = Vector2( 48, 0 )
custom_fonts/font = ExtResource( 5 )
autowrap = true

[node name="Boost" type="Label" parent="Player"]
margin_left = -32.0
margin_top = 48.0
margin_right = 32.0
margin_bottom = 62.0
rect_min_size = Vector2( 48, 0 )
custom_fonts/font = ExtResource( 5 )
autowrap = true

[node name="Dodge" type="Label" parent="Player"]
margin_left = -32.0
margin_top = 64.0
margin_right = 32.0
margin_bottom = 78.0
rect_min_size = Vector2( 48, 0 )
custom_fonts/font = ExtResource( 5 )
autowrap = true

[node name="Heart" type="Sprite" parent="Player"]
position = Vector2( -16, -64 )
texture = ExtResource( 8 )

[node name="Shield" type="Sprite" parent="Player"]
position = Vector2( -16, -48 )
texture = ExtResource( 7 )

[node name="HurtBox" type="Area2D" parent="."]
visible = false
position = Vector2( -360, 16 )
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 616, 336 )
shape = SubResource( 4 )

[node name="ColorRect" type="ColorRect" parent="HurtBox"]
margin_left = 584.0
margin_top = 304.0
margin_right = 648.0
margin_bottom = 368.0
color = Color( 0.870588, 0.878431, 0.0313726, 1 )

[node name="SoundFX" type="AudioStreamPlayer" parent="."]
